--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		function submit(){
 			var color = document.getElementById("dropdown").value;
 			var location = "pebblejs://close#" + encodeURIComponent(JSON.stringify(dictionary));
-			window.location.href = location;
+			document.location.href = location;
 		}
 	</script>
 
