--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	  <option value="Blue">Blue</option>
 	  <option value="Purple">Purple</option>
 	</select>
-	<button type="button" onclick="submit();">Click Me!</button>
+	<button type="button" onclick="submit();">Save</button>
 	<script>
 		function returnColor(){
 			var color = document.getElementById("dropdown").value;
