--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		}
 		function submit(){
 			var color = document.getElementById("dropdown").value;
-			var location = "pebblejs://close#" + encodeURIComponent(JSON.stringify(dictionary));
+			var location = "pebblejs://close#";
 			document.location.href = location;
 		}
 	</script>
