--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
-	<h4 style="margin-left:25px; padding-bottom:10px">Choose a color:</h4>
-	
+<center>
+	<h2 style="margin-left:25px; padding-bottom:10px">Shadow</h4>
+	<h4 style="margin-left:25px; padding-bottom:10px">Shadow Color</h4>
 	<select id="dropdown" class="btn btn-default dropdown-toggle" style="width:100px; margin-left:20px;">
 	  <option value="0">Red</option>
 	  <option value="1">Orange</option>
@@ -19,12 +19,13 @@
 	  <option value="6">Pink</option>  
 	</select>
 	<br>
-	<select id="dropdown2" class="btn btn-default dropdown-toggle" style="width:100px; margin-left:20px; margin-top:20px">
+	<h4 style="margin-left:25px; padding-top:20px; padding-bottom:10px">Background Color</h4>
+	<select id="dropdown2" class="btn btn-default dropdown-toggle" style="width:100px; margin-left:20px;">
 	  <option value="0">Black</option>
 	  <option value="1">White</option>
 	</select>
-
-	<p style="text-align:center;">
+</center>
+	<p style="text-align:center; margin-top:20px" >
 		<button type="button" class="submit btn btn-success" onclick="submit();">Save</button>
 	</p>
 	<script>
