--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <center>
-	<h2 style="margin-left:25px; padding-bottom:10px">Shadow</h4>
+	<h3 style="margin-left:25px; padding-bottom:10px">Shadow Settings</h4>
 	<h4 style="margin-left:25px; padding-bottom:10px">Shadow Color</h4>
 	<select id="dropdown" class="btn btn-default dropdown-toggle" style="width:100px; margin-left:20px;">
 	  <option value="0">Red</option>
