--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <center>
-	<h3 style="margin-left:25px; padding-bottom:10px">Shadow Settings</h4>
-	<h4 style="margin-left:25px; padding-bottom:10px">Shadow Color</h4>
-	<select id="dropdown" class="btn btn-default dropdown-toggle" style="width:100px; margin-left:20px;">
+	<h3 style="padding-bottom:10px">Shadow Settings</h4>
+	<h4 style="padding-bottom:10px">Shadow Color</h4>
+	<select id="dropdown" class="btn btn-default dropdown-toggle" style="width:100px;">
 	  <option value="0">Red</option>
 	  <option value="1">Orange</option>
 	  <option value="2">Yellow</option>
@@ -19,14 +19,14 @@
 	  <option value="6">Pink</option>  
 	</select>
 	<br>
-	<h4 style="margin-left:25px; padding-top:20px; padding-bottom:10px">Background Color</h4>
-	<select id="dropdown2" class="btn btn-default dropdown-toggle" style="width:100px; margin-left:20px;">
+	<h4 style="padding-top:20px; padding-bottom:10px">Background Color</h4>
+	<select id="dropdown2" class="btn btn-default dropdown-toggle" style="width:100px;">
 	  <option value="0">Black</option>
 	  <option value="1">White</option>
 	</select>
 </center>
 	<p style="text-align:center; margin-top:20px" >
-		<button type="button" class="submit btn btn-success" onclick="submit();">Save</button>
+		<button type="button" style = "width:150px" class="submit btn btn-success" onclick="submit();">Save</button>
 	</p>
 	<script>
 		function submit(){
